# ffmpeg-mcp

./: .gitignore  README.md  pyproject.toml
ffmpeg_mcp/: main.py
ffmpeg_mcp/configs/: __init__.py  logging_config.py
ffmpeg_mcp/exceptions/: __init__.py  build_exception_message.py
ffmpeg_mcp/services/: __init__.py  clip_video.py  concat_clips_with_transition.py  crop_video.py  extract_audio.py  extract_frames.py  get_video_metadata.py  make_gif.py  normalize_video_clips.py  overlay_image.py  overlay_videos.py  overlays_video.py  scale_up_videos.py  scale_video.py  scale_videos.py  trim_and_concatenate_video.py  video_metadata.py
utils/: __init__.py  calculate_video_offset.py  get_video_duration.py  validate_input_video_path.py
