[project]
name = "ffmpeg-mcp-python"
version = "0.1.0"
description = "A MCP server for seemless video editing via plain texts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yubraj Sigdel, email = "yubrajsigdel1@gmail.com"}, {name="Swati Dutta"}, {name = "Yogesh Panta"}, {name = "Aayush Puri"}]
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[project-urls]
Homepage = https://github.com/video-creator/ffmpeg-mcp
Repository = https://github.com/video-creator/ffmpeg-mcp

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 138
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "PLE"]
ignore = ["E101", "E402", "E501", "F841", "E731"]
unfixable = ["E101", "E402", "E501", "F841", "E731"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
